# tex-to-pdf-api

./: DOCS.md  PLAN.md  README.md  V2.md  WARP.md  main.py  nixpacks.toml  pyproject.toml  railpack.json  railway.json  requirements.txt  test_manual.py
app/: main.py
app/api/: exception_handlers.py  routes_compile.py  routes_v2.py
app/core/: config.py  logging.py
app/models/: compile.py
app/services/: adapters.py  latex_compiler.py  pipeline.py  textcount.py  validators.py  workdir.py
tests/: conftest.py  test_api.py  test_compiler.py  test_pipeline.py  test_regression.py  test_security.py  test_textcount.py  test_v2_api.py  test_validators.py
tests/fixtures/projects/multifile/: main.tex
tests/fixtures/projects/multifile/chapters/: one.tex
tests/fixtures/projects/nested_main/src/: main.tex
tests/fixtures/projects/with_bib/: main.tex  refs.bib
tests/fixtures/projects/with_biblatex/: main.tex  refs.bib
tests/fixtures/projects/with_sty/: custom.sty  main.tex
