[project]
name = "latex-api"
version = "0.1.0"
description = "A robust, rate-limited, and secure LaTeX compilation API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.2.1",
    "httpx>=0.27.0", # For testing
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = ["."]
